[gd_scene load_steps=24 format=3 uid="uid://b80xhycomdql1"]

[ext_resource type="Script" uid="uid://cwhhjyoelbd62" path="res://Scripts/left_wall.gd" id="1_cn0c4"]
[ext_resource type="Texture2D" uid="uid://b6qw3tx8kdk58" path="res://Sprites/LeftWallSpritesheet.png" id="2_o6taf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cn0c4"]
atlas = ExtResource("2_o6taf")
region = Rect2(0, 0, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6taf"]
atlas = ExtResource("2_o6taf")
region = Rect2(80, 0, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_52umt"]
atlas = ExtResource("2_o6taf")
region = Rect2(160, 0, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vtdy"]
atlas = ExtResource("2_o6taf")
region = Rect2(240, 0, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl2wh"]
atlas = ExtResource("2_o6taf")
region = Rect2(320, 0, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf35e"]
atlas = ExtResource("2_o6taf")
region = Rect2(0, 320, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_rebvo"]
atlas = ExtResource("2_o6taf")
region = Rect2(80, 320, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_jihs1"]
atlas = ExtResource("2_o6taf")
region = Rect2(160, 320, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_im2lp"]
atlas = ExtResource("2_o6taf")
region = Rect2(240, 320, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xryl"]
atlas = ExtResource("2_o6taf")
region = Rect2(320, 320, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tteq"]
atlas = ExtResource("2_o6taf")
region = Rect2(0, 640, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2w36"]
atlas = ExtResource("2_o6taf")
region = Rect2(80, 640, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpjkp"]
atlas = ExtResource("2_o6taf")
region = Rect2(160, 640, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7y6b"]
atlas = ExtResource("2_o6taf")
region = Rect2(240, 640, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf38d"]
atlas = ExtResource("2_o6taf")
region = Rect2(320, 640, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7gyj"]
atlas = ExtResource("2_o6taf")
region = Rect2(0, 960, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ysn7"]
atlas = ExtResource("2_o6taf")
region = Rect2(80, 960, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw6dd"]
atlas = ExtResource("2_o6taf")
region = Rect2(160, 960, 80, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rjhx"]
atlas = ExtResource("2_o6taf")
region = Rect2(240, 960, 80, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_rfl50"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn0c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6taf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52umt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vtdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl2wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf35e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rebvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jihs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im2lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xryl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tteq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2w36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpjkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7y6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf38d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7gyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ysn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw6dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rjhx")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cmayf"]
radius = 4.0
height = 106.036

[node name="LeftWall" type="Node2D"]
script = ExtResource("1_cn0c4")

[node name="leftWallAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rfl50")

[node name="leftWallTop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWallTop"]
position = Vector2(2, -118)
rotation = 2.35502
shape = SubResource("CapsuleShape2D_cmayf")

[node name="leftWallBottom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWallBottom"]
position = Vector2(2, 116)
rotation = -2.35445
shape = SubResource("CapsuleShape2D_cmayf")

[node name="leftWallDownCast" type="RayCast2D" parent="."]
position = Vector2(-81, -203)
target_position = Vector2(0, 311)

[node name="leftWallUpCast" type="RayCast2D" parent="."]
position = Vector2(-90, 103)
target_position = Vector2(0, -310)

[connection signal="input_event" from="leftWallTop" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="leftWallTop" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="leftWallTop" to="." method="_on_area_2d_mouse_exited"]
